# Murmuration_Assignment

./: README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  requirements.txt  start.sh  wait-for-it.sh
backend/app/: __init__.py  main.py
backend/app/db/: context.py  database.py  table.py
backend/app/models/: base.py
backend/app/tests/: api_tests.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js
terraform/: main.tf
