[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "murmuration"
version = "0.1.0"
description = "Survey API with FastAPI and PostgreSQL"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "psycopg2-binary",
    "pydantic"
]

[tool.setuptools]
packages = ["backend"] 